--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,9 @@
     package="com.example.retrofitroom">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    android:name=".App"
-    <application
 
+    <application
+        android:name=".dagger.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
